fixed overlapping of text accross various text cards (#904)
* fixed overlapping of text accross various text cards

* fixed styles that tend to break in IE and Edge

--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -221,6 +221,8 @@ input.rw-input {
 }
 
 .text-area-show {
+  display: block;
+  width: 100%;
   word-wrap: break-word;
 }
 
